# mini-compose

./: LICENSE  README.md  pyproject.toml
mini_compose/: __main__.py  compose.py  container.py  entities.py  exceptions.py  manifest.py  network.py
